Adding a Workflows Bundle

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>rosetta-demo-pom-build</module>
 		<module>rosetta-demo-pom-osgi</module>
 		<module>rosetta-demo-common</module>
+		<module>rosetta-demo-workflow</module>
 		<module>rosetta-demo-ui-businesslogic</module>
 		<module>rosetta-demo-ui</module>
 	</modules>
