--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>rosetta-demo-common</module>
 		<module>rosetta-demo-workflow</module>
 		<module>rosetta-demo-helloworld</module>
+		<module>rosetta-demo-services</module>
 		<module>rosetta-demo-ui-businesslogic</module>
 		<module>rosetta-demo-ui</module>
 	</modules>
